convert blockquotes to markdown format

--- a/_posts/2011-12-05-evercore-on-the-impact-of-kindle-fire-on-other-android-tablets.textile
+++ b/_posts/2011-12-05-evercore-on-the-impact-of-kindle-fire-on-other-android-tablets.textile
@@ -5,7 +5,7 @@ date: 2011-12-05 11:35
 post-link: http://tech.fortune.cnn.com/2011/12/05/evercore-amazon-will-own-50-of-android-tablet-market-in-12/
 ---
 
-bq. Amazon's success may just vaporize other "for profit" Android tablet OEM roadmaps.
+> Amazon's success may just vaporize other "for profit" Android tablet OEM roadmaps.
 
 The biggest competitor to Android tablets is Android itself through Amazon's Kindle Fire.  As I mentioned the other day "the Kindle Fire defines the bottom end in tablet pricing":/2011/12/03/the-kindle-fire-defines-the-bottom-end-in-tablet-pricing.html.
 
