--- a/_posts/2011-12-23-godaddy-no-longer-supports-sopa.textile
+++ b/_posts/2011-12-23-godaddy-no-longer-supports-sopa.textile
@@ -5,7 +5,7 @@ date: 2011-12-23 10:00
 post-link: http://www.godaddy.com/newscenter/release-view.aspx?news_item_id=378
 ---
 
-bq. Go Daddy will support it when and if the Internet community supports it.
+> Go Daddy will support it when and if the Internet community supports it.
 
 More like GoDaddy does not support losing business in droves.
 
