--- a/_posts/2012-01-18-apple-just-needs-to-put-pressure-on-tablet-pricing.textile
+++ b/_posts/2012-01-18-apple-just-needs-to-put-pressure-on-tablet-pricing.textile
@@ -7,7 +7,7 @@ post-link: http://www.marco.org/2012/01/17/display-panel-shipment-plans-suggest-
 
 Marco Arment writes:
 
-bq. The Kindle Fire and Nook Color are $199 and the iPad starts at $499. How far down can Apple push the price of the iPad 2’s basic design, maybe with only 8 GB of flash? $199 probably isn’t possible and $399 probably isn’t a significant enough reduction to change anything, but if they can get it down to $299, that would take a lot of wind out of the 7” tablets’ half-assed sails.
+> The Kindle Fire and Nook Color are $199 and the iPad starts at $499. How far down can Apple push the price of the iPad 2’s basic design, maybe with only 8 GB of flash? $199 probably isn’t possible and $399 probably isn’t a significant enough reduction to change anything, but if they can get it down to $299, that would take a lot of wind out of the 7” tablets’ half-assed sails.
 
 I think Marco is wrong with his price estimate if the iPad 2 was to continue (and I believe it will) when the iPad 3 is introduced.
 
