--- a/_posts/2012-01-21-why-the-emotional-criticism-of-ibooks-author-is-wrong.textile
+++ b/_posts/2012-01-21-why-the-emotional-criticism-of-ibooks-author-is-wrong.textile
@@ -5,7 +5,7 @@ date: 2012-01-21 10:59
 post-link: http://www.cultofmac.com/141832/why-the-emotional-criticism-of-ibooks-author-is-wrong/
 ---
 
-bq.. Apple is offering a publishing and distribution channel and, by the way, here’s a free tool optimized for supporting that channel.
+>. Apple is offering a publishing and distribution channel and, by the way, here’s a free tool optimized for supporting that channel.
 
 If Apple had decided to make iBooks Author a web app that constituted the first step in submitting your work to iBooks distribution, nobody would be complaining. They would see the online authoring tool as just part of the publishing channel.
 
