--- a/_posts/2012-01-26-hawaiian-data-retention-bill-hb-2288-tabled.textile
+++ b/_posts/2012-01-26-hawaiian-data-retention-bill-hb-2288-tabled.textile
@@ -7,7 +7,7 @@ post-link: http://www.therepublic.com/view/story/6fc347f1957444899ce1be6f4377b84
 
 Treena Shapiro reporting for Associated Press:
 
-bq.. State lawmakers have tabled a proposal that would have required Internet service providers to retain all Hawaii consumers' subscriber data and browsing histories for a minimum of two years.
+>. State lawmakers have tabled a proposal that would have required Internet service providers to retain all Hawaii consumers' subscriber data and browsing histories for a minimum of two years.
 
 Introduced a way to combat Internet-related crime, House Bill 2288 received support from Honolulu's police and prosecutor departments and one individual, but was otherwise greeted with vehement opposition at a hearing Thursday.
 
