--- a/_posts/2012-06-11-mac-pro-users-and-their-sense-of-entitlement.textile
+++ b/_posts/2012-06-11-mac-pro-users-and-their-sense-of-entitlement.textile
@@ -5,7 +5,7 @@ date: 2012-06-11 19:49
 post-link: http://www.marco.org/2012/06/11/half-assed-mac-pro
 ---
 
-bq.. I bet this is the last Mac Pro. If you wanted to kill a product line, an “update” like today’s would be a good way to clear out parts and keep selling to a few desperate buyers for a bit longer without any real investment.
+>. I bet this is the last Mac Pro. If you wanted to kill a product line, an “update” like today’s would be a good way to clear out parts and keep selling to a few desperate buyers for a bit longer without any real investment.
 
 This is pathetic.
 
@@ -15,7 +15,7 @@ Relax, the Mac Pro will get a proper update next year. It's as if the 2012 debut
 
 "According to Tim Cook":http://www.macrumors.com/2012/06/11/david-pogue-new-imacs-and-mac-pros-coming-probably-in-2013/:
 
-bq. Our pro customers are really important to us...don't worry as we're working on something really great for later next year.
+> Our pro customers are really important to us...don't worry as we're working on something really great for later next year.
 
 Apple hasn't forgotten about 'pros'.  They fully understand their roots in the desktop publishing market and other professional industries.  It's just that Apple has changed as a company and is now the biggest technology company in the world with a different product line from 10 years ago.  With that new found status comes priorities, increased shareholder interest and increased competition.  Perhaps the picture of where Apple is now with the general computing market is where Apple always wanted to be when they first began in the late 70's?  I think so.
 
