--- a/_posts/2011-10-13-xcode-4.2-notes.textile
+++ b/_posts/2011-10-13-xcode-4.2-notes.textile
@@ -7,7 +7,7 @@ These are the most pertinent features to me.
 
 h2. Default compiler
 
-bq. The default compiler for iOS development in Xcode 4.2 is LLVM 3.0. Compared with the GCC compiler that was the default in Xcode 4.0 and the LLVM-GCC compiler in Xcode 4.1, LLVM provides better code generation and optimization than GCC, along with newer language support than LLVM-GCC, including support for ARC in Objective-C and for the new C++ standard, C++0x.
+> The default compiler for iOS development in Xcode 4.2 is LLVM 3.0. Compared with the GCC compiler that was the default in Xcode 4.0 and the LLVM-GCC compiler in Xcode 4.1, LLVM provides better code generation and optimization than GCC, along with newer language support than LLVM-GCC, including support for ARC in Objective-C and for the new C++ standard, C++0x.
 
 h2(#storyboarding). Storyboarding
 
@@ -15,7 +15,7 @@ h2(#storyboarding). Storyboarding
 
 h2. Automatic Reference Counting
 
-bq. ARC is supported in Xcode 4.2 for Mac OS X v10.6 and v10.7 (64-bit applications) and for iOS 4 and iOS 5. Weak references are not supported in Mac OS X v10.6 and iOS 4.
+> ARC is supported in Xcode 4.2 for Mac OS X v10.6 and v10.7 (64-bit applications) and for iOS 4 and iOS 5. Weak references are not supported in Mac OS X v10.6 and iOS 4.
 
 h2. Links
 
