--- a/_posts/2011-12-03-the-kindle-fire-defines-the-bottom-end-in-tablet-pricing.textile
+++ b/_posts/2011-12-03-the-kindle-fire-defines-the-bottom-end-in-tablet-pricing.textile
@@ -5,7 +5,7 @@ date: 2011-12-03 00:10
 post-link: http://www.isuppli.com/Display-Materials-and-Systems/News/Pages/Red-Hot-Kindle-Fire-Blazes-its-Way-to-Second-Place-in-Media-Tablet-Market.aspx
 ---
 
-bq. Most other Android tablet makers must earn a profit based on hardware sales alone. In contrast, Amazon plans to use the Kindle Fire to drive sales of physical goods that comprise the majority of the company’s business. As long as this strategy is successful, the company can afford to take a loss on the hardware—while its Android competitors cannot.
+> Most other Android tablet makers must earn a profit based on hardware sales alone. In contrast, Amazon plans to use the Kindle Fire to drive sales of physical goods that comprise the majority of the company’s business. As long as this strategy is successful, the company can afford to take a loss on the hardware—while its Android competitors cannot.
 
 With Amazon selling its Kindle Fire tablet at a loss, the business model for them is to make money on the content and related Amazon.com store products.  The problem for other Android competitors is that Amazon has set the pricing bar as low as it can go.  $199 is the bottom end for tablet pricing whether you have a separate business model or not.
 
