--- a/_posts/2011-12-04-Android-graphics.textile
+++ b/_posts/2011-12-04-Android-graphics.textile
@@ -6,11 +6,11 @@ post-link: https://plus.google.com/105051985738280261832/posts/2FXDCz8x93s
 
 It's a very long post.
 
-bq. Nobody cares how it is done. It is a tad embarrassing to look at a 2011 Android phone that can't draw a list as smoothly as the 2007 iPhone. Not a single Android tablet can even come close to the responsiveness of the iPad, even with much better hardware.
+> Nobody cares how it is done. It is a tad embarrassing to look at a 2011 Android phone that can't draw a list as smoothly as the 2007 iPhone. Not a single Android tablet can even come close to the responsiveness of the iPad, even with much better hardware.
 
 This is a comment from "Matt Reilly":https://plus.google.com/115204202895778710915 from the post.
 
-bq. The closed model has and will always have huge advantages in graphics speed. Compare the performance on an Xbox with a 99% identical PC to demonstrate the difference. Coding a graphic layer which addresses a fixed hardware accelerator is simply the fastest way to achieve things so Apple will always have the advantage there.
+> The closed model has and will always have huge advantages in graphics speed. Compare the performance on an Xbox with a 99% identical PC to demonstrate the difference. Coding a graphic layer which addresses a fixed hardware accelerator is simply the fastest way to achieve things so Apple will always have the advantage there.
 
 This is a comment from "Max Huijgen":https://plus.google.com/112352920206354603958 from the post.
 
