--- a/_posts/2011-12-08-What-Eric-Schmidt-actually-said.textile
+++ b/_posts/2011-12-08-What-Eric-Schmidt-actually-said.textile
@@ -3,11 +3,11 @@ layout: post
 title: What Eric Schmidt actually said
 ---
 
-bq. Whether you like Android or not, you will support that platform, and maybe you'll even deliver it first.
+> Whether you like Android or not, you will support that platform, and maybe you'll even deliver it first.
 
 The quote above is significant because it was transcribed incorrectly in Stephen Shankland's "CNET article.":http://news.cnet.com/8301-30685_3-57338276-264/googles-schmidt-android-leads-the-iphone/ A couple of prominent bloggers took the incorrect quote and ran with it as the headline to "their":http://www.marco.org/2011/12/07/eric-schmidt-android-leads-the-iphone "posts.":http://daringfireball.net/linked/2011/12/07/marco-or-not
 
-bq. Whether you like ICS or not, and again I like it a great deal, you will want to develop for that platform, and perhaps even first.
+> Whether you like ICS or not, and again I like it a great deal, you will want to develop for that platform, and perhaps even first.
 
 That is what he actually said.  I actually wanted to see the actual interview because I wanted see how he delivered the quoted words.  So here it is "in context with the lead up question.":http://www.youtube.com/watch?v=t02iJn5Ypio#t=41m12s
 
