--- a/_posts/2011-12-23-magazine-publishers-also-love-the-ipad.textile
+++ b/_posts/2011-12-23-magazine-publishers-also-love-the-ipad.textile
@@ -5,7 +5,7 @@ date: 2011-12-23 10:21
 post-link: http://allthingsd.com/20111223/maybe-apples-newsstand-really-was-a-present-for-publishers/
 ---
 
-bq. The really promising indicator for Pop Sci isn’t the one-week sales leap of 13 percent — it’s that the the magazine’s growth picked up after that week, with more velocity.
+> The really promising indicator for Pop Sci isn’t the one-week sales leap of 13 percent — it’s that the the magazine’s growth picked up after that week, with more velocity.
 
 What I really remember about Steve Jobs presenting the iPad was that he talked about content and getting people to pay for it.  Apple understands that the internet and technology brings about new possibilities but if you work with content providers you can creatively transition their business models to new technology so that industries don't get destroyed.
 
