--- a/_posts/2011-12-28-apple-wants-to-offer-you-a-revolutionary-television-experience.textile
+++ b/_posts/2011-12-28-apple-wants-to-offer-you-a-revolutionary-television-experience.textile
@@ -5,7 +5,7 @@ date: 2011-12-28 14:19
 post-link: http://www.appleinsider.com/articles/11/12/28/apple_wants_to_offer_television_subscribers_customized_channel_lineups.html
 ---
 
-bq. Hardware and technology are not the issues holding back Apple from releasing a television set, he said. Instead, Apple must negotiate unique content deals that will allow the company to differentiate its product from other televisions on the market.
+> Hardware and technology are not the issues holding back Apple from releasing a television set, he said. Instead, Apple must negotiate unique content deals that will allow the company to differentiate its product from other televisions on the market.
 
 I like how Apple works with content providers on business models to deliver content to users.  People are initially 'Wowed' by the beautiful hardware but the experience is what keeps people coming back and enriches their lives.
 
@@ -13,11 +13,11 @@ Apple has a general distaste for advertising as a core business model.  When it 
 
 What better way to disrupt television than by eliminating advertising altogether?
 
-bq. He said the obvious way Apple could allow this is to integrate with a cable or satellite subscription already offered to customers. 
+> He said the obvious way Apple could allow this is to integrate with a cable or satellite subscription already offered to customers. 
 
 Sure you could take the approach of not working with content providers and "seeing how far that gets you.":http://online.wsj.com/article/SB10001424052702303339504575566572021412854.html
 
-bq. But the more revolutionary way would be to deliver live content via the Internet or IPTV, a method that would be more in line with the company's existing iTunes and iCloud services.
+> But the more revolutionary way would be to deliver live content via the Internet or IPTV, a method that would be more in line with the company's existing iTunes and iCloud services.
 
 You say you want a revolution.
 
