--- a/_posts/2012-01-12-introducing-the-android-design-site.textile
+++ b/_posts/2012-01-12-introducing-the-android-design-site.textile
@@ -5,7 +5,7 @@ date: 2012-01-12 11:35
 post-link: http://android-developers.blogspot.com/2012/01/introducing-android-design-site.html
 ---
 
-bq. To help you in that mission, we’re introducing Android Design: the place to learn about principles, building blocks, and patterns for creating world-class Android user interfaces. Whether you’re a UI professional or a developer playing that role, these docs show you how to make good design decisions, big and small.
+> To help you in that mission, we’re introducing Android Design: the place to learn about principles, building blocks, and patterns for creating world-class Android user interfaces. Whether you’re a UI professional or a developer playing that role, these docs show you how to make good design decisions, big and small.
 
 Probably the biggest thing that annoys me about the Android ecosystem is the general inconsistency of apps.  The navigation is always different with apps along with the look and feel.  It's amazing that it took this long to come out with "design guidelines":http://android-developers.blogspot.com/2012/01/introducing-android-design-site.html for developers to follow.  I know that when I was exploring Android it was frustrating that there was nothing like this available at the time.
 
