--- a/_posts/2012-01-29-how-google-can-save-android-close-it-license-it-swim-in-the-profits.textile
+++ b/_posts/2012-01-29-how-google-can-save-android-close-it-license-it-swim-in-the-profits.textile
@@ -7,11 +7,11 @@ post-link: http://pandodaily.com/2012/01/28/how-google-can-save-android-close-it
 
 Farhad Manjoo on PandoDaily writes:
 
-bq. It’s time for Google to try something radically different: Close Android. License it — you know, sell it in exchange for money! — to phone makers.
+> It’s time for Google to try something radically different: Close Android. License it — you know, sell it in exchange for money! — to phone makers.
 
 A very poorly article which jumps to multiple incoherent and improbable conclusions.  It assumes that manufacturers would be OK with Google changing the favorable software licensing terms of Android moving forward and that they would be OK with paying Google to have the privilege in doing so.
 
-bq. In the phone business, the real money is in Apple’s model, in building and selling your own phones. Copy it.
+> In the phone business, the real money is in Apple’s model, in building and selling your own phones. Copy it.
 
 The basic premise of the article is that Google does not make as much per unit profit from Android compared to Apple.
 
