--- a/_posts/2012-02-06-speculative-developers.textile
+++ b/_posts/2012-02-06-speculative-developers.textile
@@ -5,7 +5,7 @@ date: 2012-02-06 16:11
 post-link: http://www.macsparky.com/blog/2012/2/6/speculative-developers.html
 ---
 
-bq. If you want to develop apps, take your time and make something awesome. Make it fast. Make it beautiful. Make something you’re proud of. Don’t make 60 crappy apps: Make one really good one.
+> If you want to develop apps, take your time and make something awesome. Make it fast. Make it beautiful. Make something you’re proud of. Don’t make 60 crappy apps: Make one really good one.
 
 I tend to agree with this article which mostly outlines what David calls "speculative developers" or ones who "barf out as many apps as possible in the shortest time possible in hopes that they strike gold in the App Store lottery".
 
